add:新增Amazon S3的AWS SDK for Java 2.x版本